--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
             <button>Donate Now</button>
         </div>
     </section>
+
+    <section id="donate_today">
+        <div class="donateTodayHeading">
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="choose_amount">
+            <button class="btn">100tk</button>
+            <button class="btn active">200tk</button>
+            <button class="btn">500tk</button>
+            <button class="btn">1000tk</button>
+            <button class="btn">5000tk</button>
+        </div>
+        <div class="donate_now">
+            <input type="number" placeholder="Other Amount (Taka)">
+            <hr>
+            <button>Donate Now</button>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
