--- a/index.html
+++ b/index.html
@@ -39,6 +39,33 @@
         </div>
     </section>
 
+    <section id="donate_plan">
+        <div class="donatePlanHeading">
+            <h1>Our Donate Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="plan_cards_container">
+            <div class="plan_card color1">
+                <img src="icons/food.png" alt="food picture">
+                <h2>Food for a family</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="plan_card color2">
+                <img src="icons/shelter.png" alt="shelter icon">
+                <h2>Shelter for a family</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="plan_card color3">
+                <img src="icons/Frame-1.png" alt=" frame icon">
+                <h2>Education for a child</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
