people story1 section structure complete

--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
             </div>
         </div>
     </section>
+    <section class="peoples_story1">
+        <div class="half_width leftContent">
+            <h1>Their lives depend on your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button>How to Contribute?</button>
+        </div>
+        <div class="half_width">
+            <img src="images/donation8.jpg" class="image_style">
+        </div>
+    </section>
 
 </body>
 
