peoples story2 structure complete

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
             </div>
         </div>
     </section>
+
     <section class="peoples_story1">
-        <div class="half_width leftContent">
+        <div class="half_width left_padding leftContent">
             <h1>Their lives depend on your donation</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim</p>
@@ -76,6 +77,19 @@
         </div>
         <div class="half_width">
             <img src="images/donation8.jpg" class="image_style">
+        </div>
+    </section>
+
+    <section class="peoples_story2">
+        <div class="half_width left_padding">
+            <img src="images/donation5.jpg" class="image_style">
+        </div>
+        <div class="half_width rightContent">
+            <h1>They need us to suvive</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
+            <button>How to Contribute?</button>
         </div>
     </section>
 
