--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
         </div>
     </section>
 
+    <section id="get_update">
+        <div id="getUpdateHeading">
+            <h1>Get My Updates</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+        </div>
+        <div class="subscribe">
+            <form action="" class="form">
+                <input type="email" placeholder="Email">
+                <button>Subscribe</button>
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
