donate today section style complete with some minor changes on html parts too

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                 animal noluisse, enim</p>
         </div>
         <div class="choose_amount">
-            <button class="btn">100tk</button>
-            <button class="btn active">200tk</button>
-            <button class="btn">500tk</button>
-            <button class="btn">1000tk</button>
-            <button class="btn">5000tk</button>
+            <button class="btn_tk">100tk</button>
+            <button class="btn_tk active">200tk</button>
+            <button class="btn_tk">500tk</button>
+            <button class="btn_tk">1000tk</button>
+            <button class="btn_tk">5000tk</button>
         </div>
         <div class="donate_now">
             <input type="number" placeholder="Other Amount (Taka)">
             <hr>
-            <button>Donate Now</button>
+            <button class="donate_btn">Donate Now</button>
         </div>
     </section>
 
