people story1 style complete

--- a/index.html
+++ b/index.html
@@ -74,14 +74,16 @@
     </section>
 
     <section class="peoples_story1">
-        <div class="half_width left_padding leftContent">
-            <h1>Their lives depend on your donation</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+        <div class="width_left leftContent">
+            <h1 class="peoples_story_h1">Their lives depend on your donation</h1>
+            <p class="peoples_story_p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo
                 animal noluisse, enim</p>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
-            <button>How to Contribute?</button>
+            <p class="peoples_story_p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset.</p>
+            <button class="contribute_btn">How to Contribute?</button>
         </div>
-        <div class="half_width">
+        <div class="image_container">
             <img src="images/donation8.jpg" class="image_style">
         </div>
     </section>
