--- a/index.html
+++ b/index.html
@@ -84,20 +84,24 @@
             <button class="contribute_btn">How to Contribute?</button>
         </div>
         <div class="image_container">
-            <img src="images/donation8.jpg" class="image_style">
+            <img src="images/donation8.jpg" class="right_image_style">
         </div>
     </section>
 
     <section class="peoples_story2">
-        <div class="half_width left_padding">
-            <img src="images/donation5.jpg" class="image_style">
+        <div class="width_left">
+            <img src="images/donation5.jpg" class="left_image_style">
         </div>
-        <div class="half_width rightContent">
-            <h1>They need us to suvive</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset.</p>
-            <button>How to Contribute?</button>
+        <div class="width_right">
+            <div class="rightContent">
+                <h1 class="peoples_story_h1">They need us to suvive</h1>
+                <p class="peoples_story_p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset. No duo populo
+                    animal noluisse, enim</p>
+                <p class="peoples_story_p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    deterruisset.</p>
+                <button class="contribute_btn">How to Contribute?</button>
+            </div>
         </div>
     </section>
 
