get update style complete

--- a/index.html
+++ b/index.html
@@ -107,14 +107,15 @@
 
     <section id="get_update">
         <div id="getUpdateHeading">
-            <h1>Get My Updates</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+            <h1 class="peoples_story_h1">Get My Updates</h1>
+            <p class="peoples_story_p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo
                 animal noluisse, enim</p>
         </div>
         <div class="subscribe">
             <form action="" class="form">
-                <input type="email" placeholder="Email">
-                <button>Subscribe</button>
+                <input id="email_input" type="email" placeholder="Email">
+                <button id="subs_btn">Subscribe</button>
             </form>
         </div>
     </section>
